image fix on mobile

--- a/css/visit.css
+++ b/css/visit.css
@@ -143,7 +143,7 @@ iframe{
     max-width: 500px;
     height: 100%;
     border-radius: 5px;
-    object-fit: cover;
+    object-fit: fill;
     margin:var(--spacing-medium);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
